# eia-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  test_api.py
.claude/: settings.local.json
eia_mcp/: __init__.py  server.py
